--- a/templates/categories/show.html.twig
+++ b/templates/categories/show.html.twig
@@ -8,7 +8,7 @@
 		<div class="container-fluid">
 			<div class="row mb-2">
 				<div class="col-sm-6">
-					<h1 class="m-0 text-dark">Ludo et Sophie - Voir catégorie {{ category.id }}</h1>
+					<h1 class="m-0 text-dark">Ludo et Sophie - Voir catégorie "{{ category.title }}"</h1>
 				</div>
 				<!-- /.col -->
 				<div class="col-sm-6">
@@ -33,10 +33,6 @@
 
 			<table class="table">
 				<tbody>
-					<tr>
-						<th>Id</th>
-						<td>{{ category.id }}</td>
-					</tr>
 					<tr>
 						<th>Titre</th>
 						<td>{{ category.title }}</td>
