Formulaire création/modification utilisateur

--- a/templates/users/edit.html.twig
+++ b/templates/users/edit.html.twig
@@ -32,8 +32,8 @@
 		<div class="container-fluid">
 
 			{{ include('users/_form.html.twig', {'button_label': 'Update'}) }}
-
-			<a href="{{ path('users_index') }}">Retour à la liste</a>
+			<a class="d-block" href="{{ path('users_change_password', {id: user.id}) }}">Changer de mot de passe ?</a>
+			<a class="d-block" href="{{ path('users_index') }}">Retour à la liste</a>
 
 			{{ include('users/_delete_form.html.twig') }}
 		</div>
