--- a/templates/comments/edit.html.twig
+++ b/templates/comments/edit.html.twig
@@ -9,8 +9,7 @@
 		<div class="container-fluid">
 			<div class="row mb-2">
 				<div class="col-sm-6">
-					<h1 class="m-0 text-dark">Ludo et Sophie - Modérer avis client
-						{{ comment.id }}</h1>
+					<h1 class="m-0 text-dark">Ludo et Sophie - Modérer avis client de {{ comment.pseudo }} le {{ comment.createdAt|date('d-m-Y H:i:s') }}</h1>
 				</div>
 				<!-- /.col -->
 				<div class="col-sm-6">
