--- a/templates/comments/index.html.twig
+++ b/templates/comments/index.html.twig
@@ -32,6 +32,14 @@
 	<div class="content">
 		<div class="container-fluid">
 
+			{% for message in app.flashes('success') %}
+				<div class="alert alert-success" role="alert">{{ message }}</div>
+			{% endfor %}
+
+			{% for message in app.flashes('fail') %}
+				<div class="alert alert-warning" role="alert">{{ message }}</div>
+			{% endfor %}
+
 			<table class="table">
 				<thead>
 					<tr>
@@ -62,6 +70,7 @@
 							<td>
 								<a href="{{ path('comments_show', {'id': comment.id}) }}">Voir</a>
 								<a href="{{ path('comments_edit', {'id': comment.id}) }}">Modérer</a>
+								{{ include('comments/_delete_form.html.twig') }}
 							</td>
 						</tr>
 					{% else %}
