--- a/templates/comments/show.html.twig
+++ b/templates/comments/show.html.twig
@@ -12,10 +12,7 @@
 		<div class="container-fluid">
 			<div class="row mb-2">
 				<div class="col-sm-6">
-					<h1 class="m-0 text-dark">Ludo et Sophie - avis client de
-						{{ comment.pseudo }}
-						le
-						{{ comment.createdAt|date('d-m-Y H:i:s') }}</h1>
+					<h1 class="m-0 text-dark">Ludo et Sophie - avis client de {{ comment.pseudo }} le {{ comment.createdAt|date('d-m-Y H:i:s') }}</h1>
 				</div>
 				<!-- /.col -->
 				<div class="col-sm-6">
