--- a/templates/languages/index.html.twig
+++ b/templates/languages/index.html.twig
@@ -31,6 +31,14 @@
 	<!-- Main content -->
 	<div class="content">
 		<div class="container-fluid">
+		
+			{% for message in app.flashes('success') %}
+				<div class="alert alert-success" role="alert">{{ message }}</div>
+			{% endfor %}
+
+			{% for message in app.flashes('fail') %}
+				<div class="alert alert-warning" role="alert">{{ message }}</div>
+			{% endfor %}
 
 			<table class="table">
 				<thead>
@@ -45,7 +53,7 @@
 						<tr>
 							<td>{{ language.name }}</td>
 							<td>
-								<img src="{{ asset('images/'~ language.flag ) | imagine_filter('miniatures') }}" alt="Drapeau associé à la langue {{ language.name }}">
+								<img src="{{ asset('images/languages/'~ language.flag ) | imagine_filter('miniatures') }}" alt="Drapeau associé à la langue {{ language.name }}">
 							</td>
 							<td>
 								<a href="{{ path('languages_edit', {'id': language.id}) }}">Editer</a>
