--- a/templates/products/index.html.twig
+++ b/templates/products/index.html.twig
@@ -4,115 +4,123 @@
 {% endblock %}
 
 {% block body %}
-	<!-- Content Header (Page header) -->
-	<div class="content-header">
-		<div class="container-fluid">
-			<div class="row mb-2">
-				<div class="col-sm-6">
-					<h1 class="m-0 text-dark">Ludo et Sophie - Index des ***REMOVED***</h1>
-				</div>
-				<!-- /.col -->
-				<div class="col-sm-6">
-					<ol class="breadcrumb float-sm-right">
-						<li class="breadcrumb-item">
-							<a href="{{ path('admin') }}">Dashboard</a>
-						</li>
-						<li class="breadcrumb-item active">Sorties</li>
-					</ol>
-				</div>
-				<!-- /.col -->
+<!-- Content Header (Page header) -->
+<div class="content-header">
+	<div class="container-fluid">
+		<div class="row mb-2">
+			<div class="col-sm-6">
+				<h1 class="m-0 text-dark">Ludo et Sophie - Index des ***REMOVED***</h1>
 			</div>
-			<!-- /.row -->
+			<!-- /.col -->
+			<div class="col-sm-6">
+				<ol class="breadcrumb float-sm-right">
+					<li class="breadcrumb-item">
+						<a href="{{ path('admin') }}">Dashboard</a>
+					</li>
+					<li class="breadcrumb-item active">Sorties</li>
+				</ol>
+			</div>
+			<!-- /.col -->
 		</div>
-		<!-- /.container-fluid -->
+		<!-- /.row -->
 	</div>
-	<!-- /.content-header -->
+	<!-- /.container-fluid -->
+</div>
+<!-- /.content-header -->
 
-	<!-- Main content -->
-	<div class="content">
-		<div class="container-fluid">
+<!-- Main content -->
+<div class="content">
+	<div class="container-fluid">
 
-			<table class="table">
-				<thead>
-					<tr>
-						<th>
-							{{ knp_pagination_sortable(products, 'Titre', 'title') }}
-						</th>
-						<th>
-							{{ knp_pagination_sortable(products, 'Lieu de sortie', 'hangoutLocation' ) }}
-						</th>
-						<th>
-							{{ knp_pagination_sortable(products, 'Reference', 'reference') }}
-						</th>
-						<th>
-							{{ knp_pagination_sortable(products, 'Créé le', 'createdAt') }}
-						</th>
-						<th>
-							{{ knp_pagination_sortable(products, 'Modifié le', 'updatedAt') }}
-						</th>
-						<th>
-							{{ knp_pagination_sortable(products, 'Prix HT', 'preTaxPrice') }}
-						</th>
-						<th>
-							{{ knp_pagination_sortable(products, 'Prix TTC', 'taxIncludedPrice') }}
-						</th>
-						<th>
-							{{ knp_pagination_sortable(products, 'Nombre d\'avis clients', 'comments.count' ) }}
-						</th>
-						<th>
+		{% for message in app.flashes('success') %}
+			<div class="alert alert-success" role="alert">{{ message }}</div>
+		{% endfor %}
+
+		{% for message in app.flashes('fail') %}
+			<div class="alert alert-warning" role="alert">{{ message }}</div>
+		{% endfor %}
+
+		<table class="table">
+			<thead>
+				<tr>
+					<th>
+						{{ knp_pagination_sortable(products, 'Titre', 'title') }}
+					</th>
+					<th>
+						{{ knp_pagination_sortable(products, 'Lieu de sortie', 'hangoutLocation' ) }}
+					</th>
+					<th>
+						{{ knp_pagination_sortable(products, 'Reference', 'reference') }}
+					</th>
+					<th>
+						{{ knp_pagination_sortable(products, 'Créé le', 'createdAt') }}
+					</th>
+					<th>
+						{{ knp_pagination_sortable(products, 'Modifié le', 'updatedAt') }}
+					</th>
+					<th>
+						{{ knp_pagination_sortable(products, 'Prix HT', 'preTaxPrice') }}
+					</th>
+					<th>
+						{{ knp_pagination_sortable(products, 'Prix TTC', 'taxIncludedPrice') }}
+					</th>
+					<th>
+						{{ knp_pagination_sortable(products, 'Nombre d\'avis clients', 'comments.count' ) }}
+					</th>
+					<th>
 							{{ knp_pagination_sortable(products, 'Nombre de messages clients', 'messages.count' ) }}
-						</th>
-						<th>actions</th>
+					</th>
+					<th>actions</th>
+				</tr>
+			</thead>
+			<tbody>
+				{% for product in products %}
+					<tr>
+						<td>{{ product.title }}</td>
+						<td>{{ product.hangoutLocation }}</td>
+						<td>{{ product.reference }}</td>
+						<td>{{ product.createdAt ? product.createdAt|date('d-m-Y H:i:s') : '' }}</td>
+						<td>{{ product.updatedAt ? product.updatedAt|date('d-m-Y H:i:s') : '' }}</td>
+						<td>{{ product.preTaxPrice }}
+							&euro;</td>
+						<td>{{ product.taxIncludedPrice }}
+							&euro;</td>
+						<td>{{ product.comments | length }}
+							{% if product.comments | length > 0 %}
+								<a title="Voir les avis clients pour cette sortie" href="{{ path('comments_index', {productId:product.id}) }}">Voir</a>
+							{% endif %}
+
+						</td>
+						<td>{{ product.messages | length }}
+
+							{% if product.messages | length > 0 %}
+								<a title="Voir les messages clients pour cette sortie" href="{{ path('messages_index', {productId:product.id}) }}">Voir</a>
+							{% endif %}
+						</td>
+						<td>
+							<a href="{{ path('products_show', {'id': product.id}) }}">Voir</a>
+							<a href="{{ path('products_edit', {'id': product.id}) }}">Modifier</a>
+							{{ include('products/_delete_form.html.twig') }}
+						</td>
 					</tr>
-				</thead>
-				<tbody>
-					{% for product in products %}
-						<tr>
-							<td>{{ product.title }}</td>
-							<td>{{ product.hangoutLocation }}</td>
-							<td>{{ product.reference }}</td>
-							<td>{{ product.createdAt ? product.createdAt|date('d-m-Y H:i:s') : '' }}</td>
-							<td>{{ product.updatedAt ? product.updatedAt|date('d-m-Y H:i:s') : '' }}</td>
-							<td>{{ product.preTaxPrice }}
-								&euro;</td>
-							<td>{{ product.taxIncludedPrice }}
-								&euro;</td>
-							<td>{{ product.comments | length }}
-								{% if product.comments | length > 0 %}
-									<a title="Voir les avis clients pour cette sortie" href="{{ path('comments_index', {productId:product.id}) }}">Voir</a>
-								{% endif %}
+				{% else %}
+					<tr>
+						<td colspan="10">Aucune sortie enregistrée</td>
+					</tr>
+				{% endfor %}
+			</tbody>
 
-							</td>
-							<td>{{ product.messages | length }}
-
-								{% if product.messages | length > 0 %}
-									<a title="Voir les messages clients pour cette sortie" href="{{ path('messages_index', {productId:product.id}) }}">Voir</a>
-								{% endif %}
-							</td>
-							<td>
-								<a href="{{ path('products_show', {'id': product.id}) }}">Voir</a>
-								<a href="{{ path('products_edit', {'id': product.id}) }}">Modifier</a>
-							</td>
-						</tr>
-					{% else %}
-						<tr>
-							<td colspan="17">Aucune sortie enregistrée</td>
-						</tr>
-					{% endfor %}
-				</tbody>
-
-				<div>
-					{{ knp_pagination_render(products) }}
-				</div>
-			</table>
 			<div>
 				{{ knp_pagination_render(products) }}
 			</div>
-
-			<a href="{{ path('products_new') }}">Créer nouvelle sortie</a>
-
-
+		</table>
+		<div>
+			{{ knp_pagination_render(products) }}
 		</div>
+
+		<a href="{{ path('products_new') }}">Créer nouvelle sortie</a>
+
 	</div>
+</div>
 
 {% endblock %}
