modif bdd -> groupes d'attributs; make crud sur groupes d'attributs

--- a/templates/base-admin.html.twig
+++ b/templates/base-admin.html.twig
@@ -160,6 +160,12 @@
                                         </a>
                                     </li>
                                     <li class="nav-item">
+                                        <a href="{{ path('attribute_groups_index') }}" class="nav-link">
+                                            <i class="far fa-circle nav-icon"></i>
+                                            <p>Groupes d'attributs</p>
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
                                         <a href="{{ path('languages_index') }}" class="nav-link">
                                             <i class="far fa-circle nav-icon"></i>
                                             <p>Langues des articles</p>
