--- a/templates/attribute_groups/edit.html.twig
+++ b/templates/attribute_groups/edit.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base-admin.html.twig' %}
 
-{% block title %}Ludo et Sophie - Editer un attribut{% endblock %}
+{% block title %}Ludo et Sophie - Editer un groupe d'attributs
+{% endblock %}
 
 {% block body %}
 
@@ -9,7 +10,7 @@
 		<div class="container-fluid">
 			<div class="row mb-2">
 				<div class="col-sm-6">
-					<h1 class="m-0 text-dark">Ludo et Sophie - Editer un attribut</h1>
+					<h1 class="m-0 text-dark">Ludo et Sophie - Editer un groupe d'attributs</h1>
 				</div>
 				<!-- /.col -->
 				<div class="col-sm-6">
@@ -17,7 +18,7 @@
 						<li class="breadcrumb-item">
 							<a href="{{ path('admin') }}">Dashboard</a>
 						</li>
-						<li class="breadcrumb-item active">Attributs</li>
+						<li class="breadcrumb-item active">Groupes d'attributs</li>
 					</ol>
 				</div>
 				<!-- /.col -->
@@ -32,12 +33,11 @@
 	<div class="content">
 		<div class="container-fluid">
 
-			{{ include('attributes/_form.html.twig', {'button_label': 'Update'}) }}
+			{{ include('attribute_groups/_form.html.twig', {'button_label': 'Update'}) }}
 
-			<a href="{{ path('attributes_index') }}">Retour à la liste</a>
+			<a href="{{ path('attribute_groups_index') }}">Retour à la liste</a>
 
-			{{ include('attributes/_delete_form.html.twig') }}
-
+			{{ include('attribute_groups/_delete_form.html.twig') }}
 
 		</div>
 	</div>
