--- a/templates/languages/edit.html.twig
+++ b/templates/languages/edit.html.twig
@@ -32,7 +32,7 @@
 	<div class="content">
 		<div class="container-fluid">
 
-			{{ include('languages/_form.html.twig', {'button_label': 'Update'}) }}
+			{{ include('languages/_form.html.twig', {'button_label': 'Modifier'}) }}
 
 			<a href="{{ path('languages_index') }}">Retour à la liste</a>
 
