--- a/templates/products/edit.html.twig
+++ b/templates/products/edit.html.twig
@@ -32,7 +32,7 @@
 	<div class="content">
 		<div class="container-fluid">
 
-			{{ include('products/_form.html.twig', {'button_label': 'Update'}) }}
+			{{ include('products/_form.html.twig', {'button_label': 'Modifier'}) }}
 
 			<a href="{{ path('products_index') }}">Retour à la liste des ***REMOVED***</a>
 
