--- a/templates/attribute_groups/edit.html.twig
+++ b/templates/attribute_groups/edit.html.twig
@@ -33,7 +33,7 @@
 	<div class="content">
 		<div class="container-fluid">
 
-			{{ include('attribute_groups/_form.html.twig', {'button_label': 'Update'}) }}
+			{{ include('attribute_groups/_form.html.twig', {'button_label': 'Modifier'}) }}
 
 			<a href="{{ path('attribute_groups_index') }}">Retour à la liste</a>
 
