--- a/templates/attribute_groups/index.html.twig
+++ b/templates/attribute_groups/index.html.twig
@@ -32,11 +32,15 @@
 	<div class="content">
 		<div class="container-fluid">
 
+			{% for message in app.flashes('success') %}
+				<div class="alert alert-success" role="alert">{{ message }}</div>
+			{% endfor %}
+			
 			<table class="table">
 				<thead>
 					<tr>
 						<th>
-							{{ knp_pagination_sortable(attributes, 'Nom', 'name') }}
+							{{ knp_pagination_sortable(attribute_groups, 'Nom', 'name') }}
 						</th>
 						<th>actions</th>
 					</tr>
@@ -52,16 +56,16 @@
 						</tr>
 					{% else %}
 						<tr>
-							<td colspan="3">Aucun groupe d'attributs</td>
+							<td colspan="2">Aucun groupe d'attributs</td>
 						</tr>
 					{% endfor %}
 				</tbody>
 				<div>
-					{{ knp_pagination_render(attributes) }}
+					{{ knp_pagination_render(attribute_groups) }}
 				</div>
 			</table>
 			<div>
-				{{ knp_pagination_render(attributes) }}
+				{{ knp_pagination_render(attribute_groups) }}
 			</div>
 
 			<a href="{{ path('attribute_groups_new') }}">Créer nouveau groupe d'attributs</a>
