--- a/templates/categories/edit.html.twig
+++ b/templates/categories/edit.html.twig
@@ -32,7 +32,7 @@
 	<div class="content">
 		<div class="container-fluid">
 
-			{{ include('categories/_form.html.twig', {'button_label': 'Update'}) }}
+			{{ include('categories/_form.html.twig', {'button_label': 'Modifier'}) }}
 
 			<a href="{{ path('categories_index') }}">Retour à la liste</a>
 
