--- a/templates/products/index.html.twig
+++ b/templates/products/index.html.twig
@@ -65,10 +65,16 @@
 						{{ knp_pagination_sortable(products, 'Prix TTC', 'taxIncludedPrice') }}
 					</th>
 					<th>
+						Catégorie
+					</th>
+					<th>
+						Langue de publication
+					</th>
+					<th>
 						{{ knp_pagination_sortable(products, 'Nombre d\'avis clients', 'comments.count' ) }}
 					</th>
 					<th>
-							{{ knp_pagination_sortable(products, 'Nombre de messages clients', 'messages.count' ) }}
+						{{ knp_pagination_sortable(products, 'Nombre de messages clients', 'messages.count' ) }}
 					</th>
 					<th>actions</th>
 				</tr>
@@ -85,11 +91,16 @@
 							&euro;</td>
 						<td>{{ product.taxIncludedPrice }}
 							&euro;</td>
+						<td>
+							{{ product.category.title }}
+						</td>
+						<td>
+							{{ product.language.name }}
+						</td>
 						<td>{{ product.comments | length }}
 							{% if product.comments | length > 0 %}
 								<a title="Voir les avis clients pour cette sortie" href="{{ path('comments_index', {productId:product.id}) }}">Voir</a>
 							{% endif %}
-
 						</td>
 						<td>{{ product.messages | length }}
 
