--- a/templates/products/edit.html.twig
+++ b/templates/products/edit.html.twig
@@ -42,4 +42,5 @@
 {% endblock %}
 {% block javascripts %}
 <script src="{{ asset('js/tax.js') }}"></script>
+<script src="{{ asset('js/add-collection-widget.js') }}"></script>
 {% endblock %}
