--- a/templates/products/new.html.twig
+++ b/templates/products/new.html.twig
@@ -40,5 +40,6 @@
 {% endblock %}
 {% block javascripts %}
 <script src="{{ asset('js/tax.js') }}"></script>
+<script src="{{ asset('js/add-collection-widget.js') }}"></script>
 {% endblock %}
 
