--- a/templates/comments/show.html.twig
+++ b/templates/comments/show.html.twig
@@ -48,7 +48,11 @@
 					<tr>
 						<th>Concernant la sortie</th>
 						<td>
-							<a title="Voir la sortie associée" href="{{ path('products_show', {id:comment.product.id}) }}">{{ comment.product.title }}</a>
+							{% if comment.product != null %}
+								<a title="Voir la sortie associée" href="{{ path('products_show', {id:comment.product.id}) }}">{{ comment.product.title }}</a>
+							{% else %}
+								Commentaire associé à aucune sortie
+							{% endif %}
 						</td>
 					</tr>
 					<tr>
