--- a/templates/messages/show.html.twig
+++ b/templates/messages/show.html.twig
@@ -56,14 +56,17 @@
 						<th>Objet</th>
 						<td>{{ message.subject }}</td>
 					</tr>
-					{% if message.product != null %}
-						<tr>
-							<th>Concernant la sortie</th>
-							<td>
+					<tr>
+						<th>Concernant la sortie</th>
+						<td>
+							{% if message.product != null %}
 								<a title="Voir la sortie associée" href="{{ path('products_show', {id:message.product.id}) }}">{{ message.product.title }}</a>
-							</td>
-						</tr>
-					{% endif %}
+							{% else %}
+								Message associé à aucune sortie
+							{% endif %}
+						
+						</td>
+					</tr>
 					<tr>
 						<th>Message</th>
 						<td>{{ message.message }}</td>
