--- a/templates/categories/new.html.twig
+++ b/templates/categories/new.html.twig
@@ -39,3 +39,6 @@
 		</div>
 	</div>
 {% endblock %}
+{% block javascripts %}
+<script src="{{ asset('js/add-collection-widget.js') }}"></script>
+{% endblock %}
