--- a/templates/form/datalist.html.twig
+++ b/templates/form/datalist.html.twig
@@ -1,10 +1,16 @@
 {% block datalist_widget %}
-    <div class="form-group">
-        <p>Saisissez une nouvelle valeur :</p>
-        <input {{ block("widget_attributes") }} list="{{ id }}_list" value="{{ form.vars.value }}" class="form-control">
-        <p>Ou sélectionnez une valeur déjà disponible dans votre base de données :</p>
-        <select id="{{ id }}_list" class="form-control">
-                <option value=""></option>
-        </select>   
-    </div>
+	<div class="form-group d-block">
+		<div class="row">
+			<div class="col-6">
+				<p>Saisissez une nouvelle valeur :</p>
+				<input {{ block("widget_attributes") }} list="{{ id }}_list" value="{{ form.vars.value }}" class="form-control">
+			</div>
+			<div class="col-6">
+				<p>Ou sélectionnez une valeur déjà disponible dans votre base de données :</p>
+				<select id="{{ id }}_list" class="form-control">
+					<option value=""></option>
+				</select>
+			</div>
+		</div>
+	</div>
 {% endblock %}
