ajout animation js form product

--- a/templates/form/datalist.html.twig
+++ b/templates/form/datalist.html.twig
@@ -6,7 +6,7 @@
 				<input {{ block("widget_attributes") }} list="{{ id }}_list" value="{{ form.vars.value }}" class="form-control">
 			</div>
 			<div class="col-6">
-				<p>Ou sélectionnez une valeur déjà disponible dans votre base de données :</p>
+				<p>Ou sélectionnez dans la base de données :</p>
 				<select id="{{ id }}_list" class="form-control">
 					<option value=""></option>
 				</select>
